--- a/css/Bem.css
+++ b/css/Bem.css
@@ -2,6 +2,10 @@
 body {
   font-family: Lato; }
 
+.container {
+  max-width: 1280px;
+  margin: 0 auto; }
+
 .title {
   font-size: 34px;
   line-height: 1.2;
@@ -29,39 +33,44 @@ body {
   color: #ffffff;
   text-align: center; }
 
-.header__container {
-  width: 1920px;
-  height: 1080px;
-  background: url("../images/Bem/header/bg_image.png"); }
-
-.header__logo {
-  padding: 165px 45%; }
-
-.header__title {
-  line-height: 40px;
-  color: #ffffff;
-  text-align: center; }
-  .header__title::after {
-    margin: 50px auto 0 auto;
-    background-color: white;
-    width: 105px;
-    height: 2px; }
-
-.header__title-text {
-  font-weight: 900; }
-
-.header__title-subtext {
-  font-size: 26px;
-  font-weight: 400;
-  text-transform: none; }
-
-.header__button {
-  display: block;
-  margin: 227px auto 0 auto; }
-
-.header__btn-to-down {
-  display: block;
-  margin: 75px 951px 153px 952px; }
+.header {
+  background: url("../images/Bem/header/bg_image.png") no-repeat; }
+  .header__logo {
+    text-align: center;
+    padding: 165px 0; }
+  .header__logo-img {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 1 195px;
+    flex: 0 1 195px; }
+  .header__logo-img img {
+    max-width: 100%; }
+  .header__title {
+    line-height: 40px;
+    color: #ffffff;
+    text-align: center; }
+    .header__title::after {
+      margin: 50px auto 0 auto;
+      background-color: white;
+      width: 105px;
+      height: 2px; }
+  .header__title-text {
+    font-weight: 900; }
+  .header__title-subtext {
+    font-size: 26px;
+    font-weight: 400;
+    text-transform: none; }
+  .header__button {
+    display: block;
+    margin: 227px auto 0 auto; }
+  .header__btn-container {
+    padding: 75px 0 130px 0;
+    text-align: center; }
+  .header__btn-to-down {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 1 17px;
+    flex: 0 1 17px; }
+  .header__btn-to-down-img {
+    max-width: 100%; }
 
 .menu-link {
   font-size: 15px;
@@ -75,13 +84,9 @@ body {
   font-weight: 300;
   color: #868585; }
 
-.about__container {
-  width: 1920px;
-  height: 748px; }
-
 .about__menu {
   text-align: center;
-  height: 60px; }
+  max-height: 60px; }
 
 .about__menu-item {
   display: inline-block;
@@ -95,70 +100,63 @@ body {
   margin: 120px 0 0 0;
   text-align: center; }
 
+.about__text-container {
+  margin: 0 auto;
+  max-width: 690px;
+  padding: 37px 0 70px 0; }
+
 .about__text {
-  display: inline-block;
-  margin: 37px 624px 70px 608px;
   text-align: center; }
 
+.about__row-container {
+  max-width: 823px;
+  margin: 0 auto; }
+
 .about__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0 -15px; }
+
+.about__column-item {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 33.333%;
+  flex: 0 0 33.333%;
+  padding: 0 15px;
+  text-align: center; }
+
+.about__item-picture {
+  padding: 0 0 40px 0; }
+
+.about__item-circle {
   margin: 0 auto;
-  height: auto;
-  width: 1000px; }
-
-.about__row-columns {
-  position: relative; }
-
-.about__row-column {
-  height: 264px;
-  width: 264px; }
-
-.about__row-column--1 {
-  position: absolute;
-  left: 70px;
-  top: 0; }
-
-.about__row-column--2 {
-  position: absolute;
-  left: 300px;
-  top: 0; }
-
-.about__row-column--3 {
-  position: absolute;
-  left: 300px;
-  top: 0; }
-
-.about__column-circle {
-  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   width: 92px;
   height: 92px;
   border-radius: 50%;
-  border: 1px solid #f0f0f0;
-  position: relative; }
+  border: 1px solid #f0f0f0; }
 
-.about__column-img-1 {
-  position: relative;
-  top: 28px;
-  left: 25px; }
+.about__item-img {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 1 42px;
+  flex: 0 1 42px;
+  max-height: 32px; }
 
-.about__column-img-2 {
-  position: relative;
-  top: 28px;
-  left: 30px; }
-
-.about__column-img-3 {
-  position: relative;
-  top: 28px;
-  left: 28px; }
-
-.about__column-title {
-  text-align: center;
+.about__item-title {
   font-size: 22px;
   line-height: 1.2;
   font-weight: 400;
   letter-spacing: 0.16em;
   color: #000000;
-  margin: 41px 0 35px 0; }
+  margin: 0 0 20px 0; }
 
-.about__column-text {
-  text-align: center;
+.about__item-text {
   line-height: 26px; }
